[gd_scene load_steps=20 format=3 uid="uid://dacnnnbxv6hwq"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_xfgxr"]
[ext_resource type="PlaneMesh" uid="uid://wxksydiquxv7" path="res://resources/mesh-shapes/map_plane.tres" id="2_tqxcc"]
[ext_resource type="PackedScene" uid="uid://t4orrhthxr2i" path="res://scenes/buildings/townhall.tscn" id="3_cea35"]
[ext_resource type="Sky" uid="uid://20csmshba6rf" path="res://resources/sky/map1.tres" id="3_kukvn"]
[ext_resource type="PackedScene" uid="uid://cn35k76mmx3iv" path="res://scenes/buildings/barracks.tscn" id="4_3in6e"]
[ext_resource type="Script" path="res://scripts/RTSController.gd" id="4_qptw7"]
[ext_resource type="PackedScene" uid="uid://8ruw45y4rmfg" path="res://scenes/units/worker.tscn" id="6_v82j5"]
[ext_resource type="PackedScene" uid="uid://do7dhrmph1usg" path="res://scenes/units/warrior.tscn" id="7_edppr"]
[ext_resource type="Script" path="res://scripts/Selector.gd" id="9_a6coa"]
[ext_resource type="Script" path="res://scripts/GUIController.gd" id="10_yj1tc"]
[ext_resource type="Texture2D" uid="uid://k7fnbofhk0c2" path="res://assets/udemy/Project Assets/GUI/DetailBar.png" id="11_yufax"]
[ext_resource type="Texture2D" uid="uid://d2p1j6ypo4vf5" path="res://assets/udemy/Project Assets/GUI/MiniMap_Portrait.png" id="12_f2dpy"]
[ext_resource type="Texture2D" uid="uid://cligqukgffx0t" path="res://assets/udemy/Project Assets/GUI/SelectionBar.png" id="13_h4sc0"]
[ext_resource type="Texture2D" uid="uid://djhyxgkv3fwth" path="res://assets/udemy/Project Assets/GUI/MainBuildingImg.jpg" id="14_rrw5e"]
[ext_resource type="Texture2D" uid="uid://bb8sf1tl1kjka" path="res://assets/udemy/Project Assets/GUI/WorkerImg.jpg" id="15_a5lc5"]
[ext_resource type="PackedScene" uid="uid://bhmd2ebp84tyf" path="res://scenes/units/worker_img.tscn" id="16_1itmg"]

[sub_resource type="NavigationMesh" id="NavigationMesh_qo511"]
vertices = PackedVector3Array(-511.5, 0.5, -511.5, -511.5, 0.5, 511.5, 511.5, 0.5, 511.5, 511.5, 0.5, -511.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
geometry_parsed_geometry_type = 2
geometry_collision_mask = 4294967285

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nrdod"]
data = PackedVector3Array(250, 0, 250, -250, 0, 250, 250, 0, -250, -250, 0, 250, -250, 0, -250, 250, 0, -250)

[sub_resource type="Environment" id="Environment_juvd0"]
background_mode = 2
sky = ExtResource("3_kukvn")
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.01
volumetric_fog_detail_spread = 6.0
volumetric_fog_temporal_reprojection_amount = 0.99

[node name="=== MasterScene" type="Node"]
script = ExtResource("1_xfgxr")

[node name="=== Units" type="Node" parent="."]

[node name="Worker" parent="=== Units" instance=ExtResource("6_v82j5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.5906, 0, 17.8562)

[node name="Warrior" parent="=== Units" instance=ExtResource("7_edppr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.118, 0, -28.8268)

[node name="=== Levels" type="Node" parent="."]

[node name="World" type="Node3D" parent="=== Levels"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="=== Levels/World"]
navigation_mesh = SubResource("NavigationMesh_qo511")

[node name="MeshInstance3D" type="MeshInstance3D" parent="=== Levels/World/NavigationRegion3D"]
mesh = ExtResource("2_tqxcc")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="=== Levels/World/NavigationRegion3D/MeshInstance3D" groups=["surface"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="=== Levels/World/NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_nrdod")

[node name="=== Buildings" type="Node" parent="=== Levels/World/NavigationRegion3D"]

[node name="TownHall" parent="=== Levels/World/NavigationRegion3D/=== Buildings" instance=ExtResource("3_cea35")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -154.641, 0, 0)

[node name="Barracks" parent="=== Levels/World/NavigationRegion3D/=== Buildings" instance=ExtResource("4_3in6e")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, -109.079)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="=== Levels/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 153.298, 132.419, 151.886)

[node name="WorldEnvironment" type="WorldEnvironment" parent="=== Levels/World"]
environment = SubResource("Environment_juvd0")

[node name="RTSController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 50, 0)
script = ExtResource("4_qptw7")

[node name="Camera3D" type="Camera3D" parent="RTSController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 17)
current = true

[node name="UnitSelector" type="Control" parent="RTSController"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_a6coa")

[node name="GUIController" type="Control" parent="RTSController"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_yj1tc")

[node name="InfoBar" type="TextureRect" parent="RTSController/GUIController"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -180.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_yufax")
expand_mode = 1

[node name="MinimapContainer" type="TextureRect" parent="RTSController/GUIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -314.0
offset_right = 315.0
offset_bottom = 1.0
grow_vertical = 0
texture = ExtResource("12_f2dpy")
expand_mode = 1

[node name="SelectionBar" type="TextureRect" parent="RTSController/GUIController"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -369.0
offset_top = -222.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("13_h4sc0")
expand_mode = 1

[node name="GridContainer" type="GridContainer" parent="RTSController/GUIController/SelectionBar"]
layout_mode = 0
anchor_left = 0.0619946
anchor_top = 0.0982143
anchor_right = 0.946092
anchor_bottom = 0.924107
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 16
columns = 4
metadata/_edit_use_anchors_ = true

[node name="Button1" type="TextureButton" parent="RTSController/GUIController/SelectionBar/GridContainer"]
custom_minimum_size = Vector2(72.5, 52)
layout_mode = 2
texture_normal = ExtResource("14_rrw5e")
ignore_texture_size = true
stretch_mode = 0

[node name="Button2" type="TextureButton" parent="RTSController/GUIController/SelectionBar/GridContainer"]
custom_minimum_size = Vector2(72.5, 52)
layout_mode = 2
texture_normal = ExtResource("14_rrw5e")
ignore_texture_size = true
stretch_mode = 0

[node name="UnitPortrait" type="TextureRect" parent="RTSController/GUIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 326.0
offset_top = -160.0
offset_right = 468.0
offset_bottom = -18.0
grow_vertical = 0
texture = ExtResource("12_f2dpy")
expand_mode = 1

[node name="MainUnitImage" type="TextureRect" parent="RTSController/GUIController/UnitPortrait"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.056
anchor_right = 0.958
anchor_bottom = 0.942
offset_left = 0.0359998
offset_top = 0.0479999
offset_right = -0.0360107
offset_bottom = 0.235992
grow_vertical = 0
texture = ExtResource("15_a5lc5")
expand_mode = 1

[node name="UnitsGrid" type="GridContainer" parent="RTSController/GUIController"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_top = -160.0
offset_right = 145.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
columns = 8

[node name="WorkerImg" parent="RTSController/GUIController/UnitsGrid" instance=ExtResource("16_1itmg")]
custom_minimum_size = Vector2(55, 45)
layout_mode = 2

[connection signal="button_down" from="RTSController/GUIController/SelectionBar/GridContainer/Button1" to="RTSController/GUIController" method="_on_button_1_button_down"]
[connection signal="button_down" from="RTSController/GUIController/SelectionBar/GridContainer/Button2" to="RTSController/GUIController" method="_on_button_2_button_down"]
